[project]
name = "repeng-flex"
version = "0.5.1"
description = "representation engineering / control vectors with more flexible support for newer models"
authors = [{ name = "Troy Therrien", email = "troyth@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.26.4",
    "scikit-learn>=1.4.0",
    "torch>=2.1.2",
    "transformers>=4.36.2",
    "tqdm>=4.66.1",
    "gguf>=0.13.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["repeng*"]
